--- a/app/templates/inicio.html
+++ b/app/templates/inicio.html
@@ -4,10 +4,9 @@
 {% block contenido %}
 {% include 'menu.html'%}
 <div class="card text-bg-primary mb-3">
-    <div class="card-header">Bienvenidos al Sistema</div>
-    <div class="card-body">
-        <h5 class="card-title">Esto es una muestra de Login</h5>
-        <p class="card-text">Información importante</p>
-    </div>
+    <div class="card-header">Bienvenido, {{ nombre }}!</div>   
 </div>
+
+
+
 {% endblock %}
